samples/_failures_safe/1761448954_d2db63_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d5486816.c: In function ‘main’:
./samples/SAFE/__tmp_d5486816.c:172:20: error: missing terminating " character
  172 |             printf("Original size: %zu
      |                    ^~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_d5486816.c:172:13: error: expected expression at end of input
  172 |             printf("Original size: %zu
      |             ^~~~~~
./samples/SAFE/__tmp_d5486816.c:172:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_d5486816.c:172:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_d5486816.c:172:13: error: expected declaration or statement at end of input
